--- a/public/css/main.css
+++ b/public/css/main.css
@@ -14,15 +14,19 @@ body {
   padding-left: 0px;
 }
 
+.navbar-right {
+  padding-right: 5%;
+  padding-top: 5%;
+}
+
 .nav-links {
-  padding-right: 8%;
   position: relative;
 }
 .nav-links:after {
   display: block;
   position: absolute;
   left: 0;
-  bottom: 0px;
+  bottom: -15%;
   width: 0;
   height: 2px;
   background-color: #e2cc67;
@@ -33,8 +37,9 @@ body {
   color: #e2cc67;
 }
 .nav-links:hover:after {
-   width: 70%;
+   width: 100%;
 }
+
 
 nav {
   padding-right: 0px;
