--- a/views/index.html
+++ b/views/index.html
@@ -6,6 +6,7 @@
   <meta http-equiv="x-ua-compatible" content="ie=edge"/>
   <title>Jaytee Sanchez</title>
   <meta name="description" content=""/>
+  <meta name="google-site-verification" content="HkPf2wCEN77XmpTT5942eUkv4Q7Wu99COwy3nYbMSRk" />
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
   <link rel="stylesheet" type="text/css" href="/css/main.css"/>
